# Engram

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  install.sh
.brv/: bulwark.toml.example  engram.toml  engram.toml.example
.brv/context-tree/curated/: 2026-03-14-engram-accepts-byterover-format-md-files-without.md  2026-03-14-engram-is-a-rust-based-knowledge-compiler.md  2026-03-14-engram-ships-with-a-claude-code.md  2026-03-14-engram-uses-a-6-crate-rust-workspace.md  2026-03-14-fact-bodies-are-not-stored-in.md  2026-03-14-the-query-pipeline-has-6-tiers.md
crates/engram-bulwark/: Cargo.toml
crates/engram-bulwark/src/: audit.rs  lib.rs  policy.rs  rules.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-compiler/: Cargo.toml
crates/engram-compiler/src/: access_log_apply.rs  causal_validation.rs  causal_writer.rs  classification_cache.rs  classifier.rs  curator.rs  fingerprint.rs  indexer.rs  lib.rs  llm_classifier.rs  manifest.rs  parser.rs  state.rs  temporal_writer.rs  walker.rs  watcher.rs
crates/engram-compiler/src/tests/: curator_tests.rs  fingerprint_tests.rs  indexer_tests.rs  m4_correctness.rs  manifest_tests.rs  mod.rs  parser_tests.rs  state_tests.rs
crates/engram-compiler/tests/fixtures/: invalid_field.md  invalid_yaml.md  no_frontmatter.md  valid_engram.md  valid_legacy.md
crates/engram-core/: Cargo.toml
crates/engram-core/src/: causal.rs  config.rs  fact_type.rs  frontmatter.rs  hash.rs  lib.rs  ontology.rs  temporal.rs  validation.rs
crates/engram-core/src/tests/: mod.rs  schema_tests.rs
crates/engram-openclaw/: Cargo.toml
crates/engram-openclaw/src/: formatter.rs  lib.rs  plugin.rs
crates/engram-openclaw/src/tests/: formatter_tests.rs  mod.rs  plugin_tests.rs
crates/engram-query/: Cargo.toml
crates/engram-query/src/: access_log.rs  cache.rs  causal_query.rs  causal_reader.rs  fuzzy_cache.rs  lib.rs  result.rs  searcher.rs  temporal_query.rs  temporal_reader.rs  tier3.rs
crates/engram-query/src/tests/: cache_tests.rs  causal_query_tests.rs  enrichment_tests.rs  fuzzy_cache_tests.rs  mod.rs  query_tests.rs  searcher_tests.rs  temporal_query_tests.rs
e2e/: README.md  run.sh
e2e/corpus/: api_design.md  cluster_migration.md  deploy_event_1.md  deploy_event_2.md  docker_best_practices.md  expired_state.md  kubernetes_scheduling.md  malformed.md  redis_licensing.md  rust_error_handling.md
engram-claudecode/: README.md  test_hook.sh
engram-claudecode/.claude-plugin/: plugin.json
engram-claudecode/hooks/: hooks.json  session_end.sh  user_prompt_submit.sh
engram-claudecode/scripts/: check_and_compile.sh  format_results.sh
engram-claudecode/skill/: SKILL.md
engram-claudecode/skills/memory-recall/: SKILL.md
eval/: FINDINGS.md  README.md  queries.json  run_eval.py
eval/corpus/: annular_pressure_b7.md  api_versioning_policy.md  backup_restoration_test.md  cement_bond_evaluation.md  cluster_migration_q1.md  code_review_standards.md  corrosion_monitoring_program.md  current_deployment_v241.md  dependency_audit_q1.md  docker_image_policy.md  drilling_permit_block7.md  hse_incident_march2024.md  incident_db_outage.md  kubernetes_scheduling.md  monitoring_stack_upgrade.md  network_segmentation.md  postgres_incremental_backup.md  pressure_test_a14.md  pressure_test_a14_followup.md  production_forecast_q2.md  redis_license_change.md  regulatory_audit_2024.md  reservoir_pressure_study.md  rust_data_pipeline.md  rust_error_handling.md  slo_definitions_2024.md  storage_capacity_policy.md  tech_debt_registry.md  well_b7_bleedoff.md  well_integrity_policy.md
tests/: test_access_count.rs  test_audit_chain.rs  test_audit_rotation.rs  test_bulwark.rs  test_causal_correctness.rs  test_integration_gaps.rs  test_milestones.rs  test_ontology_integration.rs  test_pipeline.rs  test_recall.rs  test_roundtrip.rs  test_siem.rs  test_verify_audit_cli.rs
tests/common/: mod.rs
tests/fixtures/: ontology_test.json
