[package]
name = "engram-bulwark"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
engram-core = { path = "../engram-core" }
fs2 = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
mockito = "1"
