[package]
name = "engram-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
toml = "0.8"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
