[package]
name = "engram-openclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-query = { path = "../engram-query" }
engram-bulwark = { path = "../engram-bulwark" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
engram-compiler = { path = "../engram-compiler" }
tempfile = "3"
